Resolve project opening in external tab, align home page in center

--- a/css/style.css
+++ b/css/style.css
@@ -264,8 +264,9 @@ button{
 .home-section{
     display: flex;
     padding: 100px 0;
-    
+    margin-top: -5px;
 }
+
 .home-img,
 .home-text{
     padding: 15px;
